# eureka-editor

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  AUTHORS.md  AUTHORS.txt  CHANGES.txt  CLAUDE.md  CMakeLists.txt  INSTALL.txt  Makefile  Makefile.debian  Makefile.opt  Makefile.xming  README.txt  TODO.txt  WISHLIST.txt  bindings.cfg  cmake_uninstall.cmake.in  defaults.cfg  mainroot.cc  operations.cfg
.claude/: README.md
.github/workflows/: build-and-test.yml  build-macos.yml  build-windows.yml  c-cpp.yml  codeql-analysis.yml  ubuntu-compile-clang.yml  ubuntu-compile-clang24.yml  ubuntu-compile.yml  ubuntu-compile24.yml
changelogs/: 072.txt  074.txt  081.txt  084.txt  088.txt  095.txt  111.txt  124.txt  2.0.0.md  2.0.0.txt  2.0.1.md  2.0.2.md  2.0.3.md  2.1.0.md  2.1.1.md  printz.txt
common/: doom_colors.ugh  doom_common.ugh  doom_groups.ugh  doom_lines.ugh  doom_sectors.ugh  doom_specials.ugh  doom_tex.ugh  doom_things.ugh  gen_types.ugh  hexen_groups.ugh  hexen_lines.ugh  hexen_sectors.ugh  hexen_specials.ugh  param_lines.ugh  param_specials.ugh  plutonia_tex.ugh  tnt_tex.ugh  xlat_doom.cfg  xlat_hexen.cfg
debian/: control  copyright
docs/: ChangeLog_072.txt  Changes_074.txt  Changes_084.txt  Features.txt  History.txt  History_1.txt  History_2.txt  MiscNotes.txt  New_Workflow.txt
fltk/CMake/: options.cmake
games/: doom.ugh  doom2.ugh  doom_common.ugh  doom_specials.ugh  freedm.ugh  freedoom1.ugh  freedoom2.ugh  hacx.ugh  harm1.ugh  heretic.ugh  hexen.ugh  plutonia.ugh  strife1.ugh  tnt.ugh
glbsp_src/: analyze.cc  blockmap.cc  level.cc  level.h  node.cc  wad.cc
htdocs/: Cookbook_Altar.html  Cookbook_CurvedStairs.html  Cookbook_Doors.html  Cookbook_Lifts.html  Cookbook_Prefabs.html  Cookbook_Sky.html  Cookbook_Stairs.html  Cookbook_Teleporters.html  Cookbook_ToxicPool.html  Cookbook_Traps.html  Docs_CommandList.html  Docs_EditModes.html  Docs_FAQ.html  Docs_Index.html  Docs_Invoking.html  Docs_KeySystem.html  Docs_Keys.html  Docs_UghRef.html  Main_About.html  Main_Changes072.html  Main_Changes074.html  Main_Changes081.html  Main_Changes084.html  Main_Changes088.html  Main_Changes095.html  Main_Changes100.html  Main_Changes107.html  Main_Changes111.html  Main_Changes121.html  Main_Changes124.html  Main_Changes127.html  Main_Changes2.0.0.html  Main_Configuration.html  Main_Credits.html  Main_Download.html  Main_History.html  Main_SVN_Logs.html  Main_TODO.html  User_Basics.html  User_Concepts.html  (+7 more)
htgen/: Cookbook_Altar.html  Cookbook_Altar.md  Cookbook_CurvedStairs.html  Cookbook_CurvedStairs.md  Cookbook_Doors.html  Cookbook_Doors.md  Cookbook_Lifts.html  Cookbook_Lifts.md  Cookbook_Prefabs.html  Cookbook_Sky.html  Cookbook_Stairs.html  Cookbook_Teleporters.html  Cookbook_ToxicPool.html  Cookbook_Traps.html  Docs_CommandList.html  Docs_EditModes.html  Docs_FAQ.html  Docs_Index.html  Docs_Invoking.html  Docs_KeySystem.html  Docs_Keys.html  Docs_UghRef.html  Main_About.html  Main_Changes072.html  Main_Changes074.html  Main_Changes081.html  Main_Changes084.html  Main_Changes088.html  Main_Changes095.html  Main_Changes100.html  Main_Changes107.html  Main_Changes111.html  Main_Changes121.html  Main_Changes124.html  Main_Changes127.html  Main_Changes2.0.0.html  Main_Configuration.html  Main_Credits.html  Main_Download.html  Main_History.html  (+15 more)
misc/: Bindings.txt  Checks.txt  Makefile.debian  New_Workflow.txt  Scripting.txt  bindings.cfg  command-doc.toml  core_defs.up  eureka.6  eureka.desktop  eureka.nsi  eureka.rc  eureka.xpm  fltk_menu_patch.diff  manage2.fl  pack-source.sh  pack-win32.sh  pmconvert.sh  pmwiki.lua  prefs2.fl  ugh.vim  up_grammar.txt  up_syntax.vim  upload-htdocs.sh
osx/: .gitignore  CMakeLists.txt  INSTALL.txt  README.rtf  TODO.txt
osx/EurekaApp/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  Eureka Doom Editor-Info.plist  Eureka Doom Editor-Info.plist.in  Eureka Doom Editor-Prefix.pch  Eureka Doom EditorIcon.icns  OSXCalls.h  OSXCalls.mm
osx/EurekaApp/Base.lproj/: MainMenu.xib
osx/EurekaApp/en.lproj/: Credits.rtf  MainMenu.xib
ports/: boom.ugh  dsda-doom.ugh  edge-classic.ugh  edge.ugh  eternity.ugh  legacy.ugh  mbf.ugh  mbf21.ugh  odamex.ugh  vanilla-udmf.ugh  vanilla.ugh  xdoom.ugh  zdoom.ugh
src/: CMakeLists.txt  Document.cc  Document.h  DocumentModule.cc  DocumentModule.h  Errors.cc  Errors.cpp  Errors.h  Errors.hpp  FixedPoint.h  Instance.cc  Instance.h  LineDef.cc  LineDef.h  Lump.cc  Lump.h  MasterDirectory.h  PrintfMacros.h  SafeOutFile.cc  SafeOutFile.h  Sector.cc  Sector.h  Side.h  SideDef.cc  SideDef.h  Thing.cc  Thing.h  Vertex.cc  Vertex.h  WadData.cc  WadData.h  WindowsInclude.h  WindowsSanitization.h  bsp.h  bsp_level.cc  bsp_node.cc  bsp_util.cc  bsp_wad.cc  bsp_wad.h  dehconsts.h  (+214 more)
src/fltk-patch/: Fl_JPEG_Image-fltk1.3.8-macos.diff  Fl_JPEG_Image-fltk1.3.9-macos.diff
test/: CMakeLists.txt  DocumentTest.cpp  FixedPointTest.cpp  LumpTest.cpp  SStringTest.cpp  SafeOutFileTest.cpp  SectorTest.cpp  SideTest.cpp  StringTableTest.cpp  ThingTest.cpp  UITableBrowserTest.cpp  VertexTest.cpp  WadDataTest.cpp  e_basis_test.cpp  e_checks_test.cpp  e_commands_test.cpp  e_cutpaste_test.cpp  e_linedef_test.cpp  e_objects_test.cpp  im_color_test.cpp  im_img_test.cpp  lib_file_test.cpp  lib_tga_test.cpp  lib_util_test.cpp  m_bitvec_test.cpp  m_config_test.cpp  m_events_test.cpp  m_files_test.cpp  m_game_test.cpp  m_keys_test.cpp  m_parse_test.cpp  m_select_test.cpp  m_streams_test.cpp  m_testmap_test.cpp  main_test.cpp  r_grid_test.cpp  sys_debug_test.cpp  w_dehacked_test.cpp  w_loadpic_test.cpp  w_texture_test.cpp  (+1 more)
test/python/: test_print_quit.py
test/stub/: e_cutpaste_stub.cpp  e_hover_stub.cpp  e_main_stub.cpp  e_path_stub.cpp  im_img_stub.cpp  m_game_stub.cpp  m_keys_stub.cpp  osxcalls_stub.cpp  r_render_stub.cpp  ui_dialog_stub.cpp  ui_infobar_stub.cpp
test/testUtils/: FatalHandler.cpp  FatalHandler.hpp  Palette.cpp  Palette.hpp  TempDirContext.cpp  TempDirContext.hpp  Utility.cpp  Utility.hpp
vstudio/: eureka-editor.sln  eureka-editor.vcxproj  eureka-editor.vcxproj.filters
win/: CMakeLists.txt
(+47 files in other folders)
